# AutoVamp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/autovamp/: __main__.py  engine.py  models.py
src/autovamp/cli/: app.py
