[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autovamp"
dynamic = ["version"]
description = "Audio player with interactive vamp loops"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "sounddevice",
    "soundfile",
]

[tool.setuptools.dynamic]
version = {attr = "autovamp.__version__"}

[project.scripts]
autovamp = "autovamp.__main__:main"
